# ray-tracer

./: .gitignore  CMakeLists.txt  main.cpp  render.m
Application/: Application.cpp  Application.hpp
ApplicationMacOS/: ApplicationMacOS.h  ApplicationMacOS.hpp  ApplicationMacOS.m  ApplicationMacOS.mm  MainWindow.hpp  MainWindow.mm  Model.hpp
ApplicationMacOS/GeneralWindow/: GeneralViewController.hpp  GeneralViewController.mm  GeneralWindow.hpp  GeneralWindow.mm  GeneralWindowModel.hpp
ApplicationMacOS/ProgressWindow/: ProgressViewController.hpp  ProgressViewController.mm  ProgressWindow.hpp  ProgressWindow.mm  ProgressWindowModel.hpp
ApplicationMacOS/RenderWindow/: RenderViewController.hpp  RenderViewController.mm  RenderWindow.hpp  RenderWindow.mm
Core/: Core.hpp
Core/Size/: Size.cpp
Core/Vector2/: Vector2.cpp  Vector2.hpp
Core/Vector3/: Vector3.cpp  Vector3.hpp
Engine/: Engine.hpp  TriangleMesh.hpp  Vector3.hpp
Engine/Camera/: Camera.cpp  Camera.hpp
Engine/Include/: Camera.hpp  Matrix3x3.hpp  OBJImporter.hpp  Render.hpp  Shader.hpp  Size.hpp  TriangleMesh.hpp  Vector2.hpp  Vector3.hpp
Engine/RenderShader/: RenderShader.cpp  RenderShader.hpp  kernel.cl  kernel.h  kernel_shared.h
Engine/Shader/: Shader.cpp  Shader.hpp  kernel.cl  kernel_shared.h
Engine/Source/: Camera.cpp  Matrix3x3.cpp  OBJImporter.cpp  PPMExporter.cpp  Render.cpp  Shader.cpp  Time.cpp  Vector2.cpp  Vector3.cpp  kernel.cl  kernel.h  kernel_shared.h
Engine/Time/: Time.cpp  Time.hpp
Logger/: Logger.cpp  Logger.hpp
OBJImporter/: OBJImporter.cpp
PPMExporter/: PPMExporter.cpp  PPMExporter.hpp
Render/: Render.cpp  Render.hpp  kernel.cl
Render/cl/: kernel.cl  render.h
Scene/: Scene+Event.cpp  Scene+Events.cpp  Scene.cpp  Scene.hpp
cornell-box-original/: cornell-box-original.mtl
